            Ensure Exceptions/errors are reported on a blank line
            Internal: Added initialiser argument to jsvNewStringOfLength
            Internal: Added jsvObjectSetChildVar/jsvObjectSetChildVar/jsvObjectSetChildVar
            Internal: Fix jsvCopy if given a NAME_INT/etc
            Added ES6's Object.assign
            nNR5x: NRF.setScan now reads service data automatically
            nNR5x: NRF.findDevices aggregates data from multiple advertising packets

     1v94 : Allow Espruino boards to reset straight out of the DFU Bootloader             
            Improvements in handling errors in code running in IRQs
             - if writing to disconnected Bluetooth device, throw data away immediately
             - Drop chars if output buffer is full while waiting in an IRQ
             - Handle out of memory errors in jsvCreateNewChild
             - Do not garbage collect inside an IRQ
            On nRF52 devices, allow button press at boot to clear out peer manager data
            Work out length of typed array with offset correctly (fix #1204)
            nRF5x: Add Watchdog timer handling
            nRF52: start new connections on idle to ease memory allocation conflicts between code execution & IRQs
            nRF52: Ignore INVALID_STATE from CONN_PARAM_UPDATE_REQUEST (it can happen if we disconnect and then SD requests an update)
            Fix Date.toString for dates before 1970
            STM32: Fix handling of months when setting the internal RTC
            Move to a faster jsvNewFlatStringOfLength which avoids blocking memory allocation
            nRF5x: If a task is in progress, report the task ID (BleTask enum)
            nRF52: Report central mode promise errors correctly if returned by softdevice
            Remove 'out of memory' warning messages (it's stored as a flag anyway)
            nRF5x: Don't disable IRQs completely for some things - only disable Espruino ones
            Fix tab complete for Pins (fix #1213)