@@ -51,7 +51,6 @@ INCLUDE += -I$(NRF5X_SDK_PATH)/components/drivers_nrf/delay
 INCLUDE += -I$(NRF5X_SDK_PATH)/components/drivers_nrf/uart
 INCLUDE += -I$(NRF5X_SDK_PATH)/components/libraries/fds
 INCLUDE += -I$(NRF5X_SDK_PATH)/components/ble/common
-INCLUDE += -I$(NRF5X_SDK_PATH)/components/libraries/uart
 INCLUDE += -I$(NRF5X_SDK_PATH)/components/device
 INCLUDE += -I$(NRF5X_SDK_PATH)/components/libraries/button
 INCLUDE += -I$(NRF5X_SDK_PATH)/components/libraries/timer
@@ -75,7 +74,6 @@ $(NRF5X_SDK_PATH)/components/libraries/util/app_error.c \
 $(NRF5X_SDK_PATH)/components/libraries/timer/app_timer.c \
 $(NRF5X_SDK_PATH)/components/libraries/fstorage/fstorage.c \
 $(NRF5X_SDK_PATH)/components/libraries/util/nrf_assert.c \
-$(NRF5X_SDK_PATH)/components/libraries/uart/app_uart.c \
 $(NRF5X_SDK_PATH)/components/libraries/fds/fds.c \
 $(NRF5X_SDK_PATH)/components/drivers_nrf/common/nrf_drv_common.c \
 $(NRF5X_SDK_PATH)/components/drivers_nrf/gpiote/nrf_drv_gpiote.c \
