@@ -4,8 +4,9 @@
             Internal: Added jsvObjectSetChildVar/jsvObjectSetChildVar/jsvObjectSetChildVar
             Internal: Fix jsvCopy if given a NAME_INT/etc
             Added ES6's Object.assign
-            nNR5x: NRF.setScan now reads service data automatically
-            nNR5x: NRF.findDevices aggregates data from multiple advertising packets
+            nRF5x: NRF.setScan now reads service data automatically
+            nRF5x: NRF.findDevices aggregates data from multiple advertising packets
+            nRF5x: Remove app_uart and use nrf_drv_uart with double buffering - fix uart overflow errors (fix #1238)
 
      1v94 : Allow Espruino boards to reset straight out of the DFU Bootloader             
             Improvements in handling errors in code running in IRQs
